"Included userId field to events collection - Still needs to send user to the correct URL - Needs to send the current user information, and retrieve their events"
