# routes/events.js
@@ -1,13 +1,13 @@
 const router = require('express').Router();
 const eventsController = require('../controllers/events');
 const { ensureAuth } = require('../middleware/auth');
-const {createEventValidation, updateEventValidation, validateError, eventIdValidation} = require('../validation/validate');
+const {createEventValidation, updateEventValidation, validateError, eventIdValidation, userIdValidation} = require('../validation/validate');
 
 
 // get
 router.get('/', ensureAuth, eventsController.getEvents);
-router.get('/:id', ensureAuth, eventIdValidation(), validateError, eventsController.getEventById)
-
+router.get('/:id', ensureAuth, eventIdValidation(), validateError, eventsController.getEventById);
+router.get('/user/:userId', ensureAuth, userIdValidation(), validateError, eventsController.getEventsByUser);
 // post
 router.post('/', ensureAuth, createEventValidation(), validateError, eventsController.createEvent);
 
